sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value j
    	if(isSmaller(j+1,j)){
                     ^AlgGnomeSort:6: error: not found: value j
    	if(isSmaller(j+1,j)){
                         ^AlgGnomeSort:7: error: not found: value j
      		swap(j,j+1)
                     ^AlgGnomeSort:7: error: not found: value j
      		swap(j,j+1)
                       ^