sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var l=getValueCount()
  var i=0
  	while(i!=l-1){
    	if(isSmaller(j+1,j)){
      		swap(j,j+1)
        	if(i==0){
            i=1
          }
        	else{
            i=i-1
          }
        }
      else{ 
        i=i+1}
    }
  }
